<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAtras"
    android:orientation="vertical"
    tools:context="com.platzi.aplicacion1t.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_weight="8"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre_par"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_par"
                android:inputType="text" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiempo_par"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tiempo"
                android:inputType="number" />

            <Button
                android:id="@+id/button_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guardar"
                android:theme="@style/RaisedButtonDark" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:text="@string/buscar_tiempos"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiempo_bus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Nombre de la partida"
                android:inputType="text" />

            <Button
                android:id="@+id/button_buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Buscar"
                android:theme="@style/RaisedButtonDark"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
